# mailsweep

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
crates/core/: Cargo.toml
crates/core/src/: accounts.rs  archive.rs  auth.rs  cache.rs  config.rs  imap.rs  lib.rs  lock.rs  model.rs  outlook.rs  provider.rs  unsubscribe.rs
crates/core/src/gmail/: client.rs  mod.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/: gmail-setup.md  outlook-setup.md
src/: accounts.rs  archive.rs  auth.rs  cache.rs  config.rs  imap.rs  lib.rs  lock.rs  main.rs  model.rs
