[workspace]
resolver = "2"
members = ["crates/core", "crates/tui", "crates/gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
yup-oauth2 = "11"
async-trait = "0.1"
futures = "0.3"
open = "5"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

ratatui = "0.29"
crossterm = "0.28"
iced = { version = "0.13", features = ["tokio"] }

mailsweep-core = { path = "crates/core" }
