[package]
name = "mailsweep"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mailsweep contributors"]
description = "Mailsweep: a terminal app to clean out Gmail, Outlook, and IMAP mailboxes in bulk."
keywords = ["email", "gmail", "outlook", "tui", "cleanup"]
categories = ["email", "command-line-utilities"]
# repository = "https://github.com/kentonspr/mailsweep"  # uncomment before publishing

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
yup-oauth2 = "11"
async-trait = "0.1"
futures = "0.3"
open = "5"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
fs2 = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
imap = "2"
native-tls = "0.2"
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
