[package]
name = "mailsweep-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Mailsweep: mail providers (Gmail/Outlook), sync, caching, and archiving."
keywords = ["email", "gmail", "outlook", "cleanup"]
categories = ["email", "api-bindings"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
yup-oauth2.workspace = true
async-trait.workspace = true
futures.workspace = true
open.workspace = true
directories.workspace = true
rusqlite.workspace = true
zip.workspace = true
base64.workspace = true
chrono.workspace = true
