[package]
name = "mailsweep-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Mailsweep: a terminal app to clean out Gmail and Outlook mailboxes in bulk."
keywords = ["email", "gmail", "outlook", "tui", "cleanup"]
categories = ["email", "command-line-utilities"]

[[bin]]
name = "mailsweep"
path = "src/main.rs"

[dependencies]
mailsweep-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
fuzzy-matcher.workspace = true
